--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
     }
     & .title {
       font-size: 16px;
-      height: 18px;
+      height: 20px;
       display: flex;
       align-items: center;
       font-weight: 800;
@@ -44,17 +44,59 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      & a {
+        color: white;
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
       & .close {
         padding: 0;
         background: none;
         border: none;
         color: white;
       }
+      & .left {
+        display: flex;
+        align-items: center;
+        gap: 6px;
+      }
+      & .buttons {
+        border-left: 1px solid #ffffff30;
+        padding-left: 4px;
+        display: flex;
+        gap: 6px;
+        & button {
+          font-size: 14px;
+          color: white;
+          padding: 1px;
+          border: none;
+          border-radius: 4px;
+          background-color: transparent;
+          opacity: 1;
+          cursor: pointer;
+          transition: opacity 0.2s ease;
+          &:hover {
+            opacity: 0.6;
+          }
+          &.toggle {
+            border: 1px solid;
+            border-color: #ffffffd0;
+            background-color: transparent;
+            transition: border-color 0.2s ease, background-color 0.2s ease;
+            &.on {
+              border-color: #ffffff;
+              background-color: #ffffff60;
+            }
+          }
+        }
+      }
     }
     & .content {
       overflow-y: auto;
       width: 100%;
-      height: calc(100% - 22px);
+      height: calc(100% - 24px);
     }
   }
 
