--- a/src/index.css
+++ b/src/index.css
@@ -159,6 +159,10 @@
         border-radius: 4px;
         overflow: hidden;
         flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #333;
       }
       & .user {
         padding: 0;
